# nblade

./: .gitignore  .readthedocs.yaml  .release-please-config.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.zh.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  publish-crates.yml  publish-pypi.yml  publish-test.yml  publish.yml  release-please.yml
benches/: geometric_product.rs  pool_benchmark.rs
docs/: index.md  requirements.txt
docs/api/: algebra.md  multivector.md
docs/en/: index.md  quickstart.md
docs/en/api/: algebra.md  multivector.md
docs/en/examples/: cg.md  physics.md  tutorials.md
docs/en/tutorial/: 01_basics.md  02_dual.md
docs/examples/: cg.md  physics.md  tutorials.md
docs/zh/: index.md  quickstart.md
docs/zh-cn/: quickstart.md
docs/zh-cn/api/: multivector.md
docs/zh-cn/examples/: cg.md  physics.md
docs/zh-cn/tutorial/: 01_basics.md
docs/zh/api/: algebra.md  multivector.md
docs/zh/examples/: tutorials.md
docs/zh/tutorial/: 02_dual.md
examples/: README.md
examples/advanced/: 01_advanced_operations.py  02_advanced_operations.py  02_spacetime.py  03_conformal.py  03_spacetime.py
examples/applications/: 01_applications.py  03_applications.py
examples/basic/: 01_basic_operations.py  02_vector_creation.py  vector_from_array.py
examples/cg/: 01_transformations.py  02_projection.py  03_reflection.py  04_interpolation.py
examples/physics/: 01_rigid_body.py  02_kepler_problem.py  03_electromagnetism.py
examples/tutorials/: 01_quickstart.py  02_basic_operations.py  03_vectors.py  04_dual_operations.py  05_rotations.py  06_reciprocal_frame.py  07_grade_operations.py
python/: pytest.ini  test_nblade.py
python/nblade/: __init__.py  _core.pyi
src/: algebra_config.rs  lib.rs  multiplication_table.rs  signature.rs
src/basis/: frame.rs  grade.rs  index.rs  mod.rs
src/geometry/: mod.rs  projection.rs  reflection.rs  rotation.rs
src/multivector/: AGENTS.md  dense.rs  mod.rs  pool.rs  sparse.rs
src/operations/: commutator.rs  dual.rs  inverse.rs  involution.rs  mod.rs  norm.rs
src/products/: geometric.rs  geometric_simd.rs  inner.rs  mod.rs  outer.rs
src/python/: mod.rs
tests/: test_arbitrary_dimension.rs  test_property_based.proptest-regressions  test_property_based.py  test_property_based.rs  test_python_api.py
