[project]
name = "nblade"
version = "0.1.0"
description = "N-dimensional Blade - High-performance Geometric Algebra library powered by Rust"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "nblade contributors" }
]
keywords = ["geometric-algebra", "clifford-algebra", "multivector", "blade", "physics", "rust"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics"
]
dependencies = [
    "numpy>=1.20"
]

[project.urls]
Homepage = "https://github.com/UynajGI/nblade"
Documentation = "https://github.com/UynajGI/nblade#readme"
Repository = "https://github.com/UynajGI/nblade"
Issues = "https://github.com/UynajGI/nblade/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "maturin>=1.0",
    "ruff"
]
plotting = [
    "matplotlib>=3.5"
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["python"]
python-source = "python"
module-name = "nblade._core"
include = [
    { path = "Cargo.toml", format = "sdist" },
    { path = "README.md", format = "sdist" },
    { path = "src/**/*", format = "sdist" },
    { path = "python/**/*", format = "sdist" }
]

[tool.pytest.ini_options]
testpaths = ["python"]
python_files = "test_*.py"
addopts = ["-v"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]